# rag4rag

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_create_synthetic_rag_dataset_distilabel.ipynb  02_lettucedetect_on_sythnetic_rag_dataset.ipynb  03_generate_synthetic_data_with_rag.ipynb  rag4rag_experiment_demo.ipynb
notebooks/share/jupyter/kernels/rag_data/: kernel.json
